# Copyright (C) 2012 walker <mykulou@gmail.com>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_PREREQ([2.68])
AC_INIT([apue_test],
        [0.0.1],
        [walker mykulou@gmail.com],
        [apue_test])
AM_INIT_AUTOMAKE(apue_test, 0.1)
# AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([src/apue_test.c])
AC_CONFIG_HEADERS([config.h])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# LF_CONFIGURE_CC
# LF_CONFIGURE_CXX
# LF_HOST_TYPE
# LF_SET_WARNINGS
AC_PROG_RANLIB

AC_CONFIG_FILES([
   Makefile
   README
   src/Makefile
])

AC_OUTPUT
